<resources>
    <string name="app_name" translatable="false">LocalChat</string>
    <string name="userName_hint">Username</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="have_account">I already have an account</string>
    <string name="sign_up_button">Sign up</string>
    <string name="google_button" translatable="false">GOOGLE</string>
    <string name="toSignUp">To Sign Up</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="lastMessage">Last message</string>
    <string name="typeAMessage">Type a message</string>
    <string name="user">User Name:</string>
    <string name="enterYourName">Enter your name</string>
    <string name="save">Save</string>
    <string name="aboutApp">About application</string>
    <string name="version">Version 1.0</string>
    <string name="madeBy" translatable="false">Made by:</string>
    <string name="ayanot">Ayanot, Israel</string>
    <string name="educationApp">This application is for educational purposes.</string>
    <string name="sources">Information sources used to create this app:</string>
</resources>