<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/background"
    >

    <ImageView
        android:id="@+id/backArrowInSettings"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/back_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backArrowInSettings"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/avatar2"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <ImageView
            android:id="@+id/plus"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="-40dp"
            android:src="@drawable/plus" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/user"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUserNameSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterYourName"
                android:inputType="textPersonName"
                android:textColor="#000000" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/btn_bg"
            android:padding="5dp"
            android:text="@string/save"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/linear_bg"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="40dp"
            android:drawablePadding="15dp"
            android:onClick="goAbout"
            android:text="@string/aboutApp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/information" />
    </LinearLayout>

</RelativeLayout>